--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-#frontend rewrite
+# Frontend rewrite
 RewriteEngine On
 RewriteCond %{REQUEST_URI} !^/css(.*)
 RewriteCond %{REQUEST_URI} !^/images(.*)
