Redirect changes, 404 headers
- Adding parameters to redirect method
- Sending 404 headers on not found page

--- a/core/frontend/configs/const.ini
+++ b/core/frontend/configs/const.ini
@@ -1,4 +1,7 @@
 <?php
+// Locales
+define('HR_LOCALES', serialize(array('en' => 'en_GB')));
+
 // Constants
 define('NAVIGATE_DEFAULT_CONTROLLER', 'main');
 define('NAVIGATE_DEFAULT_ACTION', 'home');
