profile create page validation add, implemented facebook and twitter link validators

--- a/core/frontend/messages/properties.ini
+++ b/core/frontend/messages/properties.ini
@@ -25,7 +25,9 @@ define("VALIDATION_MESSAGES",
 					"passwordsMatch" => "Passwords don't match",
 					"isLatin" => "Only latin characters accepted",
 					"isDate" => "Invalid date format",
-					"isLinkedIn" => "Invalid linkedIn link"
+					"isLinkedIn" => "Invalid linkedIn link",
+					"isFacebook" => "Invalid facebook link",
+					"isTwitter" => "Invalid twitter link",
 				)
 		)
 );
